# cmake-sphinx

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindSphinx.cmake
docs/: doxygen.rst  index.rst
include/: bar.h  foo.h
